@@ -1500,7 +1500,7 @@
                   "Tridecagon",
                   "Tetradecagon"
                 ]
-                const shapeMass = [0.2,0.1,0.2,0.3,0.4,0.6,0.8,1,1,1,1,1]
+                const shapeMass = [0.2,0.1,0.2,0.3,0.4,0.6,0.8,0.9,0.9,0.9,0.9,0.9]//MUST be between 0 and 1, dont put 1.0 or else it will be unmovable (will have problems between 2 unmovable shapes)
                 //add support for bigger shapes in the future
         class Shape {
             constructor(x, y) {
@@ -1567,6 +1567,7 @@
                 this.circleRadius = 100;
                 this.circleSpeed = shapeRotationSpeed[shapetype];
                 this.circleAngle = Math.random() * Math.PI * 2;
+                this.mass = shapeMass[shapetype];//relative mass
             }
 
             update() {
@@ -1583,22 +1584,25 @@
                         const dist = Math.hypot(dx, dy);
                         const minDist = this.size/2 + shape.size/2;
                         if (dist < minDist) {// 2 shapes touching each other
+                            const totalMass = this.mass + shape.mass;
+                            const ratioThis = shape.mass / totalMass; // if the other shape has higher mass, then this shape moves relatively more
+                            const ratioShape = this.mass / totalMass;
                             if (dist < 0.001) {// If shapes are exactly on top of each other
                                 // Random push direction
                                 const angle = Math.random() * Math.PI * 2;
                                 const pushX = Math.cos(angle);
                                 const pushY = Math.sin(angle);
                                 const separation = minDist * 0.5;
-                                this.x -= pushX * separation;
-                                this.y -= pushY * separation;
-                                shape.x += pushX * separation;
-                                shape.y += pushY * separation;
+                                this.x -= pushX * separation * ratioThis;
+                                this.y -= pushY * separation * ratioThis;
+                                shape.x += pushX * separation * ratioShape;
+                                shape.y += pushY * separation * ratioShape;
                                 
                                 // Adjust circular centers to maintain orbits
-                                this.circleCenter.x -= pushX * separation;
-                                this.circleCenter.y -= pushY * separation;
-                                shape.circleCenter.x += pushX * separation;
-                                shape.circleCenter.y += pushY * separation;
+                                this.circleCenter.x -= pushX * separation * ratioThis;
+                                this.circleCenter.y -= pushY * separation * ratioThis;
+                                shape.circleCenter.x += pushX * separation * ratioShape;
+                                shape.circleCenter.y += pushY * separation * ratioShape;
                             }
                             else{//normal collision
                                 const nx = dx / dist;
@@ -1610,15 +1614,15 @@
                                 const bounceFactor = 0.3;
                                 const relativeSpeed = 1;
                                 // Apply separation (both shapes move half the distance) + bounce
-                                this.x -= (moveX + nx * relativeSpeed * bounceFactor);
-                                this.y -= (moveY + ny * relativeSpeed * bounceFactor);
-                                shape.x += (moveX + nx * relativeSpeed * bounceFactor);
-                                shape.y += (moveY + ny * relativeSpeed * bounceFactor);
+                                this.x -= (moveX + nx * relativeSpeed * bounceFactor) * ratioThis;
+                                this.y -= (moveY + ny * relativeSpeed * bounceFactor) * ratioThis;
+                                shape.x += (moveX + nx * relativeSpeed * bounceFactor) * ratioShape;
+                                shape.y += (moveY + ny * relativeSpeed * bounceFactor) * ratioShape;
                                 // Adjust circular centers to maintain orbits
-                                this.circleCenter.x -= (moveX + nx * relativeSpeed * bounceFactor);
-                                this.circleCenter.y -= (moveY + ny * relativeSpeed * bounceFactor);
-                                shape.circleCenter.x += (moveX + nx * relativeSpeed * bounceFactor);
-                                shape.circleCenter.y += (moveY + ny * relativeSpeed * bounceFactor);
+                                this.circleCenter.x -= (moveX + nx * relativeSpeed * bounceFactor) * ratioThis;
+                                this.circleCenter.y -= (moveY + ny * relativeSpeed * bounceFactor) * ratioThis;
+                                shape.circleCenter.x += (moveX + nx * relativeSpeed * bounceFactor) * ratioShape;
+                                shape.circleCenter.y += (moveY + ny * relativeSpeed * bounceFactor) * ratioShape;
                                 //bounce
                               /*
                                 const bounceFactor = 0.3;
